--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -5,6 +5,8 @@
 
 - [直接恢复](#直接恢复)
   - [处理NMI unblocking位](#处理nmi-unblocking位)
+- [示例](#示例)
+  - [监控SYSENTER指令的原理及实现](#监控sysenter指令的原理及实现)
 
 <!-- /code_chunk_output -->
 
@@ -22,4 +24,32 @@
 
 同样，VMM需要将 `interrupibility state` 字段bit 3置1,反馈guest在执行IRET指令前存在 "`blocking by virtual-NMI`" 阻塞状态，然后执行VMRESUME指令恢复guest执行。
 
-注意: 当 `VM-exit interruption information` 字段记录的向量号为8 (#DF异常)时，VM-exit interruption information 字段的bit 12 是未定义(参见3.10.2.1节)，VMM不需要对interruptibility state字段进行额外的设置。
+注意: 当 `VM-exit interruption information` 字段记录的向量号为8 (`#DF`异常)时，`VM-exit interruption information` 字段的 `bit 12` 是未定义(参见3.10.2.1节)，VMM不需要对`interruptibility state` 字段进行额外的设置。
+
+# 示例
+
+>实现对SYSENTER指令的监控
+
+现在，我们用一个例子来说明VMM直接恢复guest 执行而忽略产生的异常事件，这个例子实现了对guest 用户层代码执行**SYSENTER指令**的监控。本例子的代码在`chap07\ex7-1`目录下。
+
+## 监控SYSENTER指令的原理及实现
+
+用户层代码通过SYSENTER指令来快速切入kernel的服务例程，目标代码人口的线性地址提供在 `IA32_SYSENTER_EIP` 寄存器里。VMM通过设置`IA32_SYSENTER_EIP` 寄存器在 **MSR write bitmap** 区域里对应的位置1, 来监控guest更新 `IA32_SYSENTER_EIP` 寄存器。
+
+当 guest 尝试使用WRMSR指令向`IA32_SYSENTER_EIP`寄存器写人系统服务例程人口地址时产生`VM-exit`。VMM将拦截 guest 的写人动作，使用一个预先定义的**签名值**来代替这个系统服务例程人口地址值写人 `IA32_SYSENTER_EIP` 寄存器。
+
+当guest 执行SYSENTER指令时，由于**目标地址无效**(写人的**签名值**)而产生`#PF`异常，VMM拦截了`#PF`异常后(由于`#PF`异常而导致`VM-exit`)，**VMM**检查引发`#PF`异常的**源地址值**是否为这个**签名值**，如果属于则找回guest原系统服务例程的人口地址，直接恢复guest的执行。
+
+代码片段7-1:
+
+”: 定义一个SYSENTER EIP hook签名
+
+Sdefine SYSENTER HOOK SIGN
+
+'HOOK'
+
+在ex.asm 文件的开头，我们定义一个SYSENTER HOOK_ SIGN常量作为hookIA32_ SYSENTER_ EIP 寄存器的签名值。
+
+代码片段7-2:
+
+设置拦被对IA32_ sYsENTER EIP的写操作
