--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -38,15 +38,16 @@
 
 当 guest 尝试使用WRMSR指令向`IA32_SYSENTER_EIP`寄存器写人系统服务例程人口地址时产生`VM-exit`。VMM将拦截 guest 的写人动作，使用一个预先定义的**签名值**来代替这个系统服务例程人口地址值写人 `IA32_SYSENTER_EIP` 寄存器。
 
-当guest 执行SYSENTER指令时，由于**目标地址无效**(写人的**签名值**)而产生`#PF`异常，VMM拦截了`#PF`异常后(由于`#PF`异常而导致`VM-exit`)，**VMM**检查引发`#PF`异常的**源地址值**是否为这个**签名值**，如果属于则找回guest原系统服务例程的人口地址，直接恢复guest的执行。
+当guest 执行SYSENTER指令时，由于**目标地址无效**(写人的**签名值**)而产生`#PF`异常，VMM拦截了`#PF`异常后(由于`#PF`异常而导致`VM-exit`)，**VMM**检查引发`#PF`异常的**源地址值**是否为这个**签名值**，如果属于则找回guest**原系统服务例程的人口地址**，直接恢复guest的执行。
 
 代码片段7-1:
 
-”: 定义一个SYSENTER EIP hook签名
-
-Sdefine SYSENTER HOOK SIGN
-
-'HOOK'
+```x86asm
+;;
+;; 定义一个 SYSENTER_EIP hook 签名
+;;
+%define SYSENTER_HOOK_SIGN                      'HOOK'
+```
 
 在ex.asm 文件的开头，我们定义一个SYSENTER HOOK_ SIGN常量作为hookIA32_ SYSENTER_ EIP 寄存器的签名值。
 
