--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -49,8 +49,16 @@
 %define SYSENTER_HOOK_SIGN                      'HOOK'
 ```
 
-在ex.asm 文件的开头，我们定义一个SYSENTER HOOK_ SIGN常量作为hookIA32_ SYSENTER_ EIP 寄存器的签名值。
+在 ex.asm 文件的开头，我们定义一个`SYSENTER_HOOK_SIGN`常量作为`hook IA32_SYSENTER_EIP` 寄存器的签名值。
 
 代码片段7-2:
 
-设置拦被对IA32_ sYsENTER EIP的写操作
+```x86asm
+        ;;
+        ;; 设置拦截对 IA32_SYSENTER_EIP 的写操作
+        ;;
+        mov esi, IA32_SYSENTER_EIP
+        call set_msr_write_bitma
+```
+
+ 
