--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -462,7 +462,8 @@ Perf 提供了 3 种显示方式:
 ```
 
 我们还可以通过 threshold 选项过滤采样率低于 threshold 的调用路径。
-threshold 的默认值为 0.5。
+
+threshold 的**默认值**为 0.5。
 
 选项 order 用以设定调用图谱的**显示顺序**，该选项有 2 个取值，分别是
 callee 与 caller。
