--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -465,8 +465,8 @@ Perf 提供了 3 种显示方式:
 
 threshold 的**默认值**为 0.5。
 
-选项 order 用以设定调用图谱的**显示顺序**，该选项有 2 个取值，分别是
-callee 与 caller。
+选项 order 用以设定调用图谱的**显示顺序**，该选项有 2 个取值，分别是callee 与 caller。
+
 - 将该选项设为 **callee** 时，perf 按照**被调用的顺序**显示调用图谱，**上层函数被下层函数所调用**。
 - 该选项被设为 **caller** 时，按照调用顺序显示调用图谱，即**上层函数调用了下层函数**。
 
