--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -478,6 +478,12 @@ threshold 的**默认值**为 0.5。
 
 ![2020-07-20-11-08-51.png](./images/2020-07-20-11-08-51.png)
 
+默认按照`Chidren`排序, 要是按照`self`可以
+
+```
+./perf top --no-children
+```
+
 ## 仅显示部分符号
 
 * `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为`dos_name`的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
