--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/5. perf report.md
+++ b/Linux/Debug/debug/tools/perf/5. perf report.md
@@ -41,6 +41,7 @@ perf report [-i <file> | --input=file]
 * `--comms=<comm>`: 只显示指定comm的信息
 * `-S <symbol name>`: 只考虑指定符号 
 * `-U`: 只显示已解析的符号
+* `-g`: 使能函数调用图功能
 * `-g [type,min[,limit],order], --call-graph`: 按照指定的方式显示函数调用图
 * `-k`: 指定未压缩内核的位置
 
@@ -52,6 +53,10 @@ perf report [-i <file> | --input=file]
     <tr>
         <td>-i</td>
         <td>指定输入文件</td>
+    </tr>
+    <tr>
+        <td>-g</td>
+        <td>使能函数调用图功能</td>
     </tr>
     <tr>
         <td>-n</td>
@@ -172,6 +177,10 @@ perf report --sort=cpu
 ### Children/Self
 
 如果在record时收集了调用链，则Overhead可以在Children、Self两个列中显示。Children显示子代函数的样本计数、Self显示函数自己的样本计数
+
+```
+./perf report --no-children
+```
 
 # 例子
 
