--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/7. perf c2c.md
+++ b/Linux/Debug/debug/tools/perf/7. perf c2c.md
@@ -5,3 +5,7 @@ http://oliveryang.net/2018/01/cache-false-sharing-debug/
 
 https://kernel.taobao.org/2017/10/C2C-False-Sharing-Detection-in-Linux-Perf/
 
+https://joemario.github.io/blog/2016/09/01/c2c-blog/
+
+
+只支持Intel???
