--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -30,7 +30,9 @@
 
 >实现对SYSENTER指令的监控
 
-现在，我们用一个例子来说明VMM直接恢复guest 执行而忽略产生的异常事件，这个例子实现了对guest 用户层代码执行**SYSENTER指令**的监控。本例子的代码在`chap07\ex7-1`目录下。
+现在，我们用一个例子来说明VMM**直接恢复guest 执行**而**忽略产生的异常事件**，这个例子实现了对guest 用户层代码执行**SYSENTER指令**的监控。
+
+本例子的代码在`chap07\ex7-1`目录下。
 
 ## 监控SYSENTER指令的原理及实现
 
@@ -61,4 +63,3 @@
         call set_msr_write_bitma
 ```
 
- 
