--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -36,11 +36,11 @@
 
 ## 监控SYSENTER指令的原理及实现
 
-用户层代码通过SYSENTER指令来快速切入kernel的服务例程，目标代码人口的线性地址提供在 `IA32_SYSENTER_EIP` 寄存器里。VMM通过设置`IA32_SYSENTER_EIP` 寄存器在 **MSR write bitmap** 区域里对应的位置1, 来监控guest更新 `IA32_SYSENTER_EIP` 寄存器。
+用户层代码通过SYSENTER指令来快速切入kernel的服务例程，目标代码人口的线性地址提供在 `IA32_SYSENTER_EIP` 寄存器里。VMM通过设置`IA32_SYSENTER_EIP` 寄存器在 **MSR write bitmap** 区域里对应的位**置1**, 来监控guest更新 `IA32_SYSENTER_EIP` 寄存器。
 
-当 guest 尝试使用WRMSR指令向`IA32_SYSENTER_EIP`寄存器写人系统服务例程人口地址时产生`VM-exit`。VMM将拦截 guest 的写人动作，使用一个预先定义的**签名值**来代替这个系统服务例程人口地址值写人 `IA32_SYSENTER_EIP` 寄存器。
+当 guest 尝试使用**WRMSR指令**向`IA32_SYSENTER_EIP`寄存器写人系统服务例程人口地址时产生`VM-exit`。VMM将拦截 guest 的写人动作，使用一个预先定义的**签名值**来代替这个系统服务例程人口地址值**写人** `IA32_SYSENTER_EIP` 寄存器。
 
-当guest 执行SYSENTER指令时，由于**目标地址无效**(写人的**签名值**)而产生`#PF`异常，VMM拦截了`#PF`异常后(由于`#PF`异常而导致`VM-exit`)，**VMM**检查引发`#PF`异常的**源地址值**是否为这个**签名值**，如果属于则找回guest**原系统服务例程的人口地址**，直接恢复guest的执行。
+当guest 执行SYSENTER指令时，由于**目标地址无效**(写人的**签名值**)而产生`#PF`**异常！！！**，VMM拦截了`#PF`异常后(由于`#PF`异常而**导致VM-exit！！！**)，**VMM**检查引发`#PF`异常的**源地址值**是否为这个**签名值**，如果属于则找回guest**原系统服务例程的人口地址**，直接**恢复guest的执行**。
 
 代码片段7-1:
 
