--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -56,12 +56,17 @@
 代码片段7-2:
 
 ```x86asm
-        ;;
-        ;; 设置拦截对 IA32_SYSENTER_EIP 的写操作
-        ;;
-        mov esi, IA32_SYSENTER_EIP
-        call set_msr_write_bitmap
+;;
+;; 设置拦截对 IA32_SYSENTER_EIP 的写操作
+;;
+mov esi, IA32_SYSENTER_EIP
+call set_msr_write_bitmap
 ```
 
 在 `init_guest_a` 与 `init_guest_b` 函数里，调用 `set_msr_write_bitmap` 函数将 `IA32_SYSENTER_EIP` 寄存器在**MSR write bitmap**对应位**置位**。
 
+代码片段7-3:
+
+```x86asm
+
+```
