--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -68,5 +68,16 @@ call set_msr_write_bitmap
 代码片段7-3:
 
 ```x86asm
+;;
+;; 注册另一个 WRMSR 指令处理例程
+;;
+mov esi, Ex.DoWRMSR
+mov [DoVmExitRoutineTable + EXIT_NUMBER_WRMSR * 4], esi
 
+;;
+;; 注册另一个 VMM 的 page fault 处理例程
+;;                
+mov esi, Ex.DoPageFault
+mov [DoExceptionTable + 14 * 4], esi
 ```
+
