--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -7,6 +7,7 @@
   - [处理NMI unblocking位](#处理nmi-unblocking位)
 - [示例](#示例)
   - [监控SYSENTER指令的原理及实现](#监控sysenter指令的原理及实现)
+  - [处理WRMSR指令产生的VM-exit](#处理wrmsr指令产生的vm-exit)
 
 <!-- /code_chunk_output -->
 
@@ -69,15 +70,23 @@ call set_msr_write_bitmap
 
 ```x86asm
 ;;
-;; 注册另一个 WRMSR 指令处理例程
+;; 注册另一个 WRMSR 指令处理例程: Ex.DoWRMSE
 ;;
 mov esi, Ex.DoWRMSR
 mov [DoVmExitRoutineTable + EXIT_NUMBER_WRMSR * 4], esi
 
 ;;
-;; 注册另一个 VMM 的 page fault 处理例程
+;; 注册另一个 VMM 的 page fault 处理例程: Ex.DoPageFault
 ;;                
 mov esi, Ex.DoPageFault
 mov [DoExceptionTable + 14 * 4], esi
 ```
+
+接下来，在 `TargetCpuVmentry` 函数里分别注册 `WRMSR` 与 `#PF` 的处理例程: `Ex.DoWRMSR` 与 `Ex.PageFault` 函数。当由于**WRMSR指令**与`#PF`异常而产生VM-exit时，VMM将**调用它们**来进行相关的处理。
+
+## 处理WRMSR指令产生的VM-exit
+
+**guest**尝试写 `IA32 SYSENTER EIP` 寄存器时将产生`VM-exit`, VMM将替换guest想要写人的值。
+
+代码片段7-4:
 
