--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -90,3 +90,67 @@ mov [DoExceptionTable + 14 * 4], esi
 
 代码片段7-4:
 
+```x86asm
+;----------------------------------------------
+; Ex 模块的 WRMSR 处理例程　
+;----------------------------------------------
+Ex.DoWRMSR:
+        push R5
+        push R3
+        push R1
+        push R2
+        mov R5, [gs: PCB.Base]
+        
+        ;;
+        ;; 当前 VM store block
+        ;;
+        mov R3, [R5 + PCB.CurrentVmbPointer]
+        mov R3, [R3 + VMB.VsbBase]
+        
+        ;;
+        ;; 检查是否属于 IA32_SYSENTER_EIP
+        ;;
+        mov eax, [R3 + VSB.Rcx]
+        cmp eax, IA32_SYSENTER_EIP
+        jne Ex.DoWRMSR.@1
+        
+        ;;
+        ;; 设置 IA32_SYSENTER_EIP 值为 SYSENTER_HOOK_SIGN，用于验证
+        ;;
+        SetVmcsField    GUEST_IA32_SYSENTER_EIP, SYSENTER_HOOK_SIGN
+        
+        ;;
+        ;; 保存原 IA32_SYSENTER_EIP 
+        ;;
+        mov eax, [R3 + VSB.Rax]
+        mov edx, [R3 + VSB.Rdx]
+        mov [Ex.SysenterEip], eax
+        mov [Ex.SysenterEip + 4], edx
+
+        DEBUG_RECORD    "[Ex.DoWRMSR]: set SYSENTER_HOOK_SIGN !"
+                
+        jmp Ex.DoWRMSR.@2
+        
+Ex.DoWRMSR.@1:       
+        ;;
+        ;; 配置 VM-entry/VM-exit MSR-load/MSR-store
+        ;;                         
+        mov esi, eax
+        mov eax, [R3 + VSB.Rax]
+        mov edx, [R3 + VSB.Rdx]
+        call append_vmentry_msr_load_entry        
+        
+Ex.DoWRMSR.@2:
+        ;;
+        ;; 更新 guest-RIP
+        ;;
+        call update_guest_rip        
+        
+        mov eax, VMM_PROCESS_RESUME
+        pop R2
+        pop R1
+        pop R5
+        pop R3
+        ret
+```
+
