--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -8,6 +8,8 @@
 - [示例](#示例)
   - [监控SYSENTER指令的原理及实现](#监控sysenter指令的原理及实现)
   - [处理WRMSR指令产生的VM-exit](#处理wrmsr指令产生的vm-exit)
+  - [处理`#PF`异常](#处理pf异常)
+  - [guest 代码](#guest-代码)
 
 <!-- /code_chunk_output -->
 
@@ -153,4 +155,84 @@ Ex.DoWRMSR.@2:
         pop R3
         ret
 ```
+
+`Ex.DoWRMSR` 函数从当前的**VSB** (VM store block)块里**读取guest**的**RCX寄存器值**，然后判断是否为 `IA32_SYSENTER_EIP` 寄存器。
+
+(1) 是，则使用 `SetVmcsField` 宏设置**guest**的`IA32_SYSENTER_EIP`字段值为预定义的签名值。并且**读取guest**的**RAX**与**RDX**寄存器值，保存**guest想要写人的值**。
+
+(2) 否，则读取guest的RAX与RDX寄存器值，使用`append_vmentry_msr_load_entry`函数在`MSR-load`列表里添加这个MSR的表项，在`VM-entry`时加载guest的MSR内容。
+
+最后，调用update_guest_rip函数跳过guest的WRMSR指令，恢复guest的下一条指令执行。注意，VMM必须要保存 guest 写人的原值，以便后续处理及恢复。`libl\Vmx\VmxMsr.asm`文件里也实现了一个`AppendMsrVte`函数用来保存写人MSR的原值。
+
+## 处理`#PF`异常
+
+guest在尝试执行SYSENTER指令时产生`#PF`异常从而导致VM-exit。 但是，这个#PF异常并**不是由guest 本身原因**而导致的。
+
+VMM的处理如代码片段7-5所示。
+
+代码片段7-5:
+
+```x86asm
+;----------------------------------------------
+; Ex 模块的 page fault 处理例程　
+;----------------------------------------------
+Ex.DoPageFault:
+        push R5
+        push R2        
+        mov R5, [gs: PCB.Base]
+
+        ;;
+        ;; 读取引发 #PF 的线性地址
+        ;;
+        mov R0, [R5 + PCB.ExitInfoBuf + EXIT_INFO.ExitQualification]
+                
+        ;;
+        ;; 检查线性地址是否由 VMM 设置的地址值        
+        ;;
+        cmp R0, SYSENTER_HOOK_SIGN
+        mov eax, VMM_PROCESS_DUMP_VMCS
+        jne Ex.DoPageFault.Reflect
+
+        ;;
+        ;; 读取原 IA32_SYSENTER_EIP 值
+        ;;                
+        mov R0, [Ex.SysenterEip]
+        
+        DEBUG_RECORD    "[Ex.DoPageFault]: call SysRoutine !"
+        
+        ;;
+        ;; 更新 guest-RIP
+        ;;
+        SetVmcsField    GUEST_RIP, R0
+        
+        jmp Ex.DoPageFault.Done
+
+Ex.DoPageFault.Reflect:
+        ;;
+        ;; 反射 #PF 异常给回 guest
+        ;;
+        SetVmcsField    VMENTRY_INTERRUPTION_INFORMATION, INJECT_EXCEPTION_PF
+        mov eax, [R5 + PCB.ExitInfoBuf + EXIT_INFO.InterruptionErrorCode]
+        SetVmcsField    VMENTRY_EXCEPTION_ERROR_CODE, eax
+        
+Ex.DoPageFault.Done:
+        mov eax, VMM_PROCESS_RESUME
+        pop R2
+        pop R5        
+        ret
+```
+
+`Ex.DoPageFault`函数读取引发`#PF异常`的**线性地址值**，判断是否为我们所设置的**签名值**。
+
+(1)是，则读取guest想写人`IA32_SYSENTER_EIP`寄存器的原值。使用`SetVmcsField`将这个值写入guest RIP字段，从而直接跳转到目标的服务例程里执行。
+
+(2)否，则需要注人一个`#PF`异常给guest处理。
+
+注意: 当 `Ex.DoPageFault` 函数检查到不是VMM所设置的条件而引起 `#PF` 异常时，VMM应该反射`#PF`异常交回guest处理。这里直接设置`VM-entry interruption information`字段，复制错误码到`VM-entry interruption error code`字段里。
+
+## guest 代码
+
+下面是guest的部分代码，实现在`chap07/ex7-1/guest_ex.asm`文件里。
+
+代码片段7-6:
 
