--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/2. 恢复guest异常.md
@@ -10,6 +10,7 @@
   - [处理WRMSR指令产生的VM-exit](#处理wrmsr指令产生的vm-exit)
   - [处理`#PF`异常](#处理pf异常)
   - [guest 代码](#guest-代码)
+- [恢复原始向量事件](#恢复原始向量事件)
 
 <!-- /code_chunk_output -->
 
@@ -235,4 +236,8 @@ Ex.DoPageFault.Done:
 下面是guest的部分代码，实现在`chap07/ex7-1/guest_ex.asm`文件里。
 
 代码片段7-6:
+
+
+
+# 恢复原始向量事件
 
