--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. 机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. 机制.md
@@ -1,2 +1,12 @@
 
-每个逻辑处理器都有自己的local APIC组件. 当guest读取local APIC寄存器时, 将返回物理的local APIC寄存器值. 同样, 当guest写local APIC寄存器时, 也将写入物理的local APIC寄存器.
+每个逻辑处理器都有自己的local APIC组件. 当guest读取local APIC寄存器时, 将返回物理的local APIC寄存器值. 同样, 当guest写local APIC寄存器时, 也将写入**物理的local APIC寄存器！！！**.
+
+例如，**guest** 可以通过写local APIC的ICR寄存器向其他处理器发送IPI, 也可以提升local APIC的**TPR值**来**屏蔽外部中断**。guest的这些行为将**更改物理资源**，**严重地干扰host环境！！！**。
+
+为了保护物理资源，VMM必须限制 guest 对物理local APIC的访问。VMM可以选择使用下面的方案来限制访问local APIC.
+
+- 通过**EPT映射机制**或者`MSR-bitmap`**限制访问**。
+
+- 通过`virtual-APIC`机制进行虚拟化处理local APIC访问。
+
+`virtual-APIC`机制是**VMX**为local APIC而引进的**虚拟化内存机制**。guest 代码对localAPIC进行访问实际上访问的是**virtual-APIC page区域！！！**。
