--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -1,20 +1,30 @@
 
-VMM通过EPT映射机制或者MSR-bitmap来限制guest访问local APIC,其原理是监控guest访问local APIC的行为并做出相应处理。
+# 两种监控模式
 
-1. 监控**基于内存映射**的local APIC访问
+VMM通过**EPT映射机制**或者`MSR-bitmap`来限制guest访问local APIC, 其原理是监控guest访问local APIC的行为并做出相应处理。
+
+## 监控基于内存映射的local APIC访问: XAPIC
 
 当local APIC 使用 **xAPIC** 模式, local APIC 寄存器通过 `memory-mapped`(内存映射)方式映射在**物理空间**的**4K页面**上，我们可以称这个4K页面为`APIC-page`。`APIC-page`**物理基址**在`IA32_APIC_BASE`寄存器的`bits N-1:12`里提供(N=MAXPHYADDR)
 
-在这种情况下，VMM可以通过EPT映射机制来监控guest访问local APIC。
+在这种情况下，VMM可以通过**EPT映射机制！！！** 来监控guest访问local APIC。
 
-2. 监控**基于MSR**的localAPIC访问
+## 监控**基于MSR**的localAPIC访问: x2APIC
 
-当local APIC 使用 x2APIC 模式(xAPIC 的扩展模式), local APIC 寄存器映射到MSR空间上，MSR地址范围为800H一8FFH。guest 软件使用RDMSR指令读取localAPIC f2. f WRMSR 4EÀ local APIC F2.
+当local APIC 使用 **x2APIC** 模式(xAPIC 的扩展模式), local APIC 寄存器映射到**MSR空间**上，MSR地址范围为`800H ~ 8FFH`。guest 软件使用`RDMSR`指令读取local APIC寄存器. 使用 WRMSR 指令写入 local APIC 寄存器.
 
-在这种情况下，VMM可以通过设置MSR-bitmap来监控guest访问local APIC。7.2.1.1 51F 7-3 
+在这种情况下，VMM可以通过设置**MSR-bitmap！！！** 来监控guest访问local APIC。
 
-示例7-3:使用EPT机制实现local APIC虚拟化
+# 例子: 使用EPT机制实现local APIC虚拟化
 
-上文提及，当local APIC使用xAPIC模式时，我们可以通过EPT映射机制来实现监控guest访问localAPIC在这一节里， 我们将使用EPT映射机制来实现local APIC虚拟化。1.监控guest访问IA32 APIC BASE寄存器
+>示例7-3: 使用EPT机制实现local APIC虚拟化
 
-VMM LM guest Xxf IA32_ APIC BASE ffJỜỪjfïJ (Ejti 5jTjỪj]) , Я/ï这样才能够监控guest访问local APIC寄存器，如代码片段7-16所示。
+上文提及，当local APIC使用xAPIC模式时，我们可以通过EPT映射机制来实现监控guest访问localAPIC在这一节里， 我们将使用EPT映射机制来实现local APIC虚拟化。
+
+## 监控guest访问IA32_APIC_BASE寄存器
+
+VMM 必须监控 guest 对 `IA32_APIC_BASE` 寄存器的访问(包括读与写访问), 只有这样才能够监控guest访问local APIC寄存器，如代码片段7-16所示。
+
+```x86asm
+
+```
