--- Auto-Git Commit ---

--- a/Linux/Debug/编译模块.md
+++ b/Linux/Debug/编译模块.md
@@ -209,6 +209,22 @@ insmod kvm.ko
 insmod kvm-intel.ko
 ```
 
+# 
+
+如果前面多次编译过，在编译开始之前可进行清理
+
+```
+make clean       #清理编译的文件，但保留配置文件
+make mrproper    #移除所有编译生成的文件、配置文件和备份文件
+make distclean   #完全清理
+```
+
+
+
 # 参考
 
 见脚本`make.sh`
+
+
+https://blog.csdn.net/baidu_24256693/article/details/80115354
+
