--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -136,7 +136,7 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now + deadline
  |   └─ restart_apic_timer();  // 重启定时器
  |       ├─ preempt_disable(); // 关闭抢占
- |       ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
+ |       ├─ !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
  |       ├─ start_hv_timer(); // 优先使用hv timer, 即preemption timer
  |       |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
  |       |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
@@ -152,8 +152,14 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   |   |   └─ to_vmx(vcpu)->hv_deadline_tsc = -1; // 
  |       |   |   └─ ktimer->hv_timer_in_use = false; // 设置apic timer的hv timer不在使用
  |       |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
+ |       |   |   ├─ kvm_get_running_vcpu();
+ |       |   |   └─ kvm_apic_local_deliver(); //
+ |       |   |   |   └─ __apic_accept_irq();
+ |       |   |   |       └─ vmx_deliver_posted_interrupt();
+ |       |   |   |           └─ kvm_get_running_vcpu();
  |       |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
- |       start_sw_timer(); // 不能使用hv timer, 则使用sw timer
+ |       |   |   └─ vmx_cancel_hv_timer(); //
+ |       ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |       |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消hv timer
  |       |   ├─ (!apic_lvtt_period(apic) && atomic_read(&ktimer->pending)); return; // 如果不是周期性的, 但是存在pending, 直接返回
  |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用这个
