--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -54,3 +54,11 @@ mov eax, 01000000h | APIC_BASE_BSP | APIC_BASE_ENABLE
 xor edx, edx
 wrmsr
 ```
+
+guest 试图设置 `APIC-page` 的基址为 01000000 . 在产生 VM-exit 后, VMM调用DoWRMSR函数处理由于WRMSR指令而产生的 VM-exit .
+
+```x86asm
+
+```
+
+DoWRMSR函数实现在`lib\Vmx\VmxVMM.asm`文件里.它湊取VM-exit肘的ECX寄存器値.属于IA32 APIC BASE寄存器吋，凋用DoWieMsrForApicBase来辻理guest対IA32 APIC BASE寄存器的写操作。
