--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -55,7 +55,7 @@ xor edx, edx
 wrmsr
 ```
 
-guest 试图设置 `APIC-page` 的基址为 01000000 . 在产生 VM-exit 后, VMM调用DoWRMSR函数处理由于WRMSR指令而产生的 VM-exit .
+guest 试图设置 `APIC-page` 的基址为 01000000 . 在产生 VM-exit 后, VMM调用**DoWRMSR函数**处理由于WRMSR指令而产生的 VM-exit .
 
 ```x86asm
         ;;
@@ -73,7 +73,7 @@ guest 试图设置 `APIC-page` 的基址为 01000000 . 在产生 VM-exit 后, VM
 DoWRMSR.@1:  
 ```
 
-DoWRMSR函数实现在`lib\Vmx\VmxVMM.asm`文件里. 它读取`VM-exit`时的ECX寄存器値, 属于`IA32_APIC_BASE`寄存器吋，调用 `DoWriteMsrForApicBase` 来处理guest对`IA32_APIC_BASE`寄存器的**写操作**。
+**DoWRMSR函数**实现在`lib\Vmx\VmxVMM.asm`文件里. 它读取`VM-exit`时的ECX寄存器値, 属于`IA32_APIC_BASE`寄存器吋，调用 `DoWriteMsrForApicBase` 来处理guest对`IA32_APIC_BASE`寄存器的**写操作**。
 
 ```x86asm
 ;-----------------------------------------------------------------------
