--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
@@ -1,19 +1,112 @@
-测试无条件与有条件产生VM\-exit的CPUID和RDTSC指令
+>测试无条件与有条件产生VM\-exit的CPUID和RDTSC指令
 
-作为展示VM\-exit的例子, 我们只是简单地**打开两个虚拟机运行(分别为Guest与Guest2**), Guest执行一条CPUID指令后, 由VMM虚拟化CPUID指令. Guest2用来报告RDTSC指令引发的VM\-exit.
+作为展示VM\-exit的例子, 我们只是简单地**打开两个虚拟机运行(分别为Guest与Guest2**)
+* Guest1执行一条**CPUID**指令后, 由VMM虚拟化CPUID指令. 
+* Guest2用来报告**RDTSC**指令引发的`VM-exit`.
 
-```assembly
-
+```x86asm
+;-----------------------------------------------------------------------
+; guest_entry1():
+; input:
+;       none
+; output:
+;       none
+; 描述：
+;       1) 这是 guest1 的入口点
+;-----------------------------------------------------------------------
+guest_entry1:
+        DEBUG_RECORD    "[VM-entry]: switch to guest1 !"        ; 插入 debug 记录点
+        DEBUG_RECORD    "[guest]: execute CPUID !"
+        
+        ;;
+        ;; guest 尝试执行 CPUID.01H
+        ;;
+        mov eax, 01h
+        cpuid
+        
+        ;;
+        ;; 输出 guest CPU 模型
+        ;;
+        mov esi, eax
+        call get_display_family_model
+        mov ebx, eax        
+        mov esi, GuestCpuMode
+        call puts
+        mov esi, ebx
+        call print_word_value
+        
+        hlt
+        jmp $ - 1        
+        ret 
 ```
 
-上面代码片段位于chap05/ex5\-1/ex.asm文件中, 属于Guest1的代码. 为了方便观察执行过程, 在guest代码里面插入了两个debug记录点(使用DEBUG\_RECORD宏), 这两个debug记录点用来记录处理器的context及附加的信息.
+上面代码片段位于`chap05/ex5-1/ex.asm`文件中, 属于Guest1的代码. 为了方便观察执行过程, 在guest代码里面插入了两个debug记录点(使用`DEBUG_RECORD`宏), 这两个debug记录点用来**记录**处理器的**context**及**附加的信息**.
 
-Guest1尝试查询CPUID.01H(EAX=01H)信息将会发生VM\-exit, 由VMM接管CPUID指令的执行, 下面是VMM对CPUID指令的虚拟化处理.
+Guest1尝试查询`CPUID.01H`(`EAX=01H`)信息将会发生`VM-exit`, 由VMM接管CPUID指令的执行, 下面是**VMM对CPUID指令的虚拟化处理**.
 
-```assembly
+```x86asm
+;-----------------------------------------------------------------------
+; DoCPUID()
+; input:
+;       none
+; output:
+;       none
+; 描述：
+;       1) 处理尝试执行 CPUID 指令引发的 VM-exit
+;----------------------------------------------------------------------- 
+DoCPUID: 
+        push ebp
+        push ebx
+        push ecx
+        push edx
+        
+%ifdef __X64
+        LoadGsBaseToRbp
+%else
+        mov ebp, [gs: PCB.Base]
+%endif  
+
+        DEBUG_RECORD    '[DoCPUID]: virtualize CPUID!'
+        
+        REX.Wrxb
+        mov ebp, [ebp + PCB.CurrentVmbPointer]
+        REX.Wrxb
+        mov ebp, [ebp + VMB.VsbBase]
+        
+        ;;
+        ;; 由 VMM 反射一个 CPUID 虚拟化结果给 guest
+        ;;
+        mov eax, [ebp + VSB.Rax]                                        ; 读取 CPUID 功能号
+        cpuid                                                           ; 执行 CPUID 指令
+        mov eax, 633h                                                   ; 修改 guest CPU 的型号
+
+        ;;
+        ;; 将 CPUID 结果反射给 guest
+        ;;        
+        REX.Wrxb
+        mov [ebp + VSB.Rax], eax
+        REX.Wrxb
+        mov [ebp + VSB.Rbx], ebx
+        REX.Wrxb
+        mov [ebp + VSB.Rcx], ecx
+        REX.Wrxb
+        mov [ebp + VSB.Rdx], edx                        
+        
+        ;;
+        ;; 调整 guest-RIP
+        ;;
+        call update_guest_rip
+        
+        mov eax, VMM_PROCESS_RESUME                                     ; 通知 VMM 进行 RESUME 操作
+    
+        pop edx
+        pop ecx
+        pop ebx
+        pop ebp
+        ret
 ```
 
-这个代码片段位于lib/VMX/VmxVMM.asm文件里, DoCPUID函数将由VmmEntry函数调用(同一个文件内), 而**VmmEntry函数**是**由VM\-exit发生后**的**VMM进入点(？？怎么设置的？？**).
+这个代码片段位于`lib/VMX/VmxVMM.asm`文件里, DoCPUID函数将由VmmEntry函数调用(同一个文件内), 而**VmmEntry函数**是**由VM\-exit发生后**的**VMM进入点(？？怎么设置的？？**).
 
 DoCPUID函数执行的虚拟化处理如下.
 
