--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
@@ -106,17 +106,17 @@ DoCPUID:
         ret
 ```
 
-这个代码片段位于`lib/VMX/VmxVMM.asm`文件里, DoCPUID函数将由VmmEntry函数调用(同一个文件内), 而**VmmEntry函数**是**由VM\-exit发生后**的**VMM进入点(？？怎么设置的？？**).
+这个代码片段位于`lib/VMX/VmxVMM.asm`文件里, DoCPUID函数将由VmmEntry函数调用(同一个文件内), 而**VmmEntry函数**是**由VM\-exit发生后**的**VMM进入点**(在`TargetCpuVmentry`中设置).
 
-DoCPUID函数执行的虚拟化处理如下.
+**DoCPUID**函数执行的虚拟化处理如下.
 
-(1) 从EAX寄存器里读取guest给CPUID指令提供的功能号, EAX寄存器的值在VmmEntry函数内使用STORE\_CONTEXT宏保存在PCB的context区域内.
+(1) 从**EAX寄存器**里读取guest给CPUID指令提供的**功能号**, EAX寄存器的值在VmmEntry函数内使用`STORE_CONTEXT`宏保存在PCB的**context区域**内.
 
-(2) VMM执行CPUID指令读取01H功能信息. 这里只修改了处理器的型号信息, 其他信息保留不变. EAX的值修改为0633H.
+(2) **VMM**执行**CPUID**指令读取**01H功能信息**. 这里只修改了处理器的型号信息, 其他信息保留不变. EAX的值修改为0633H.
 
-(3) VMM将CPUID.01H信息保存在context区域内, 用来给guest传递信息.
+(3) VMM将`CPUID.01H`信息保存在context区域内, 用来给guest传递信息.
 
-(4) 调用update\_guest\_rip函数来更新guest的RIP值, 让RIP指向CPUID的下一条指令, 否则将产生死循环(不断发生VM\-exit与VM\-entry).
+(4) 调用update\_guest\_rip函数来**更新guest的RIP值**, 让RIP指向CPUID的下一条指令, 否则将产生死循环(不断发生VM\-exit与VM\-entry).
 
 (5) 最后通过VmmEntry函数进行RESUME操作.
 
