--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
@@ -114,9 +114,9 @@ DoCPUID:
 
 (2) **VMM**执行**CPUID**指令读取**01H功能信息**. 这里只修改了处理器的型号信息, 其他信息保留不变. EAX的值修改为0633H.
 
-(3) VMM将`CPUID.01H`信息保存在context区域内, 用来给guest传递信息.
+(3) VMM将`CPUID.01H`信息保存在context区域内, 用来**给guest传递信息**.
 
-(4) 调用update\_guest\_rip函数来**更新guest的RIP值**, 让RIP指向CPUID的下一条指令, 否则将产生死循环(不断发生VM\-exit与VM\-entry).
+(4) 调用update\_guest\_rip函数来**更新guest的RIP值**, 让RIP指向CPUID的**下一条指令**, 否则将产生死循环(不断发生VM\-exit与VM\-entry).
 
 (5) 最后通过VmmEntry函数进行RESUME操作.
 
