--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第5章 VM-Exit处理/5. 例子5-1.md
@@ -118,7 +118,7 @@ DoCPUID:
 
 (4) 调用update\_guest\_rip函数来**更新guest的RIP值**, 让RIP指向CPUID的**下一条指令**, 否则将产生死循环(不断发生VM\-exit与VM\-entry).
 
-(5) 最后通过VmmEntry函数进行RESUME操作.
+(5) 最后通过**VmmEntry函数**进行**RESUME**操作.
 
 ```assembly
 ```
