--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/12. perf ftrace.md
+++ b/Linux/Debug/debug/tools/perf/12. perf ftrace.md
@@ -2,3 +2,15 @@
 tools/perf/Documentation/perf-ftrace.txt
 
 https://blog.csdn.net/lovelycheng/article/details/78348405
+
+在perf中实现了一个ftrace的功能，其实就是把ftrace的功能集成在perf工具中进行显示。由于原先操作debugfs的接口还是要操作几个文件来配合使用的，比如:
+
+a) 设置/sys/kernel/debug/tracing/current_tracer。
+b) 打开开关/sys/kernel/debug/tracing/tracing_on。
+c) 运行待测程序。
+d) 关闭开关/sys/kernel/debug/tracing/tracing_on
+e) 获取结果：/sys/kernel/debug/tracing/trace
+
+有的时候我们用debugfs接口时都需要写一个脚本来获取，因此全部集中在perf中操作和显示，相对来讲效率是稍微提升了一些。
+
+目前tracer只支持function和function_graph，后续会陆续增加。难道后续perf有可能会把debugfs的功能全部集中到perf？不可想象。干脆把proc也集中好了，目前好像pert top就是干这个的。
