--- Auto-Git Commit ---

--- a/Tools/Mac/安装初始化过程.md
+++ b/Tools/Mac/安装初始化过程.md
@@ -105,6 +105,7 @@
   - [2.12. OBS](#212-obs)
     - [2.12.1. 系统声音设置](#2121-系统声音设置)
     - [2.12.2. OBS设置](#2122-obs设置)
+  - [iText](#itext)
   - [2.13. Eclipse](#213-eclipse)
   - [2.14. Understand](#214-understand)
   - [2.15. VS Code](#215-vs-code)
@@ -1057,6 +1058,10 @@ mac下录屏默认是没办法录入系统本身声音的, 只能录入麦克风
 "视频": 
 
 - 两个分辨率都设为"1920x1080"
+
+## iText
+
+OCR软件, 既能捕获截图, 又能进行翻译
 
 ## 2.13. Eclipse
 
