--- Auto-Git Commit ---

--- a/Tools/Mac/安装初始化过程.md
+++ b/Tools/Mac/安装初始化过程.md
@@ -1063,6 +1063,30 @@ mac下录屏默认是没办法录入系统本身声音的, 只能录入麦克风
 
 OCR软件, 既能捕获截图, 又能进行翻译
 
+使用场景：
+- 从扫描版 PDF 中提取文字
+- 从朋友发来的图片中识别文字
+- 从任意图片中识字
+
+取图方便：
+- 自带截图功能，截图即识字
+- 拖拽图片至菜单栏图标识字
+- 选择图片文件识字
+- 连续识别时，自动拼接文字
+
+识别精准：
+- 腾讯、百度、Google 三引擎，文字识别精准可靠
+- 自动识别段落，优化排版
+- 亦可预览原图，方便校对
+
+自动翻译：
+- Google、百度双引擎
+- 支持 100+ 种语言
+
+简洁高效：
+- 不占用 Dock、仅存在于菜单栏
+- 多种快捷键，操作方便
+
 ## 2.13. Eclipse
 
 ## 2.14. Understand
