--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -335,3 +335,4 @@ DoWriteMsrForApicBase.Done:
         ret
 ```
 
+`DoWritemsrforapicbase` 函数实现在 `lib\Vmx\Vmxmsr.asm` 文件里，它根据 guest 设置 local APIC 的模式（XAPIC 还是 x2APIC），以及 secondary processor- based VM- execution control 字段的设置进行虚拟化配置。
