--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -335,4 +335,28 @@ DoWriteMsrForApicBase.Done:
         ret
 ```
 
-`DoWritemsrforapicbase` 函数实现在 `lib\Vmx\Vmxmsr.asm` 文件里，它根据 guest 设置 local APIC 的模式（XAPIC 还是 x2APIC），以及 secondary processor- based VM- execution control 字段的设置进行虚拟化配置。
+`DoWritemsrforapicbase` 函数实现在 `lib\Vmx\Vmxmsr.asm` 文件里，它根据 guest 设置 **local APIC** 的**模式**（**XAPIC** 还是 **x2APIC**），以及 `secondary processor-based VM-execution control` 字段的设置进行虚拟化配置。
+
+当 local APIC 为 **XAPIC** 模式时
+* 如果 “**virtualize APIC accesses**” 为 1, 则使用 VMⅩ提供的 **local APIC 虚拟化功能**。
+* 如果 “**virtualize APIC accesses**” 为 0, 则利用 **EPT violation** 故障来达到 local APIC 虚拟化。
+
+当 local APIC 为 **x2APIC** 模式时
+* 如果“virtualize x2 APIC mode”为 1, 则使用 VMX 提供的 x2APIC 模式虚拟化功能。
+* 如果“virtualize x2 APIC mode”为 0, 则利用 MSR bitmap 来达到 local APIC 虚拟化。
+
+Dowritemsrforapicbase 例程通过检査 guest 写入 IA32 APIC BASE 寄存器的值确定 guest 的 local APIC 处于何种工作模式。在检查写入值不合法时将注入#GP 异常给 guest 处理，例如保留位（bits63: N、bit9 以及 bits7:0) 必须为 0。
+
+当利用 EPT violation 来虚拟化 local APIC 时，下面是简单的处理流程。
+
+ (1) 读取 EAX 与 EDX 寄存器值。两个寄存器组合的 64 位值是 guest 尝试写入 A32 APIC BASE 寄存器的值。
+
+ (2) 保存 guest 写入 IA32APIC_BASE 寄存器的值。这个值在 guest 读取 IA32 APIC BASE 寄存器时需要反馈给 guest
+
+ (3) 为 guest I 的写入值提供一个 EPT violation 处理例程。
+
+3. 保存 guest 的写入值
+
+在前面介绍的 Do Writemsrforapicbase 函数里，使用 Appendmsrvte 函数将 guest 的写入值保存在了 guest 对应的 MSR VTE (Value Table Entry) 区域里。这个 MSR VTE 区域在 init vmcs buffer函数初始化时从 kernel pool 里分配。
+
+在 inclvmcs. Ine 文件里定义了一个 MSR VTE 结构，这个结构用来定义 MSR VTE 区域里的每个表项。
