--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -337,15 +337,14 @@ DoWriteMsrForApicBase.Done:
 
 `DoWritemsrforapicbase` 函数实现在 `lib\Vmx\Vmxmsr.asm` 文件里，它根据 guest 设置 **local APIC** 的**模式**（**XAPIC** 还是 **x2APIC**），以及 `secondary processor-based VM-execution control` 字段的设置进行虚拟化配置。
 
-当 local APIC 为 **XAPIC** 模式时
-* 如果 “**virtualize APIC accesses**” 为 1, 则使用 VMⅩ提供的 **local APIC 虚拟化功能**。
-* 如果 “**virtualize APIC accesses**” 为 0, 则利用 **EPT violation** 故障来达到 local APIC 虚拟化。
+* 当 local APIC 为 **XAPIC** 模式时
+    * 如果 “**virtualize APIC accesses**” 为 1, 则使用 VMX 提供的 **local APIC 虚拟化功能**。
+    * 如果 “**virtualize APIC accesses**” 为 0, 则利用 **EPT violation** 故障来达到 local APIC 虚拟化。
+* 当 local APIC 为 **x2APIC** 模式时
+    * 如果 “**virtualize x2 APIC mode**” 为 1, 则使用 VMX 提供的 **x2APIC 模式虚拟化**功能。
+    * 如果 “**virtualize x2 APIC mode**” 为 0, 则利用 **MSR bitmap** 来达到 local APIC 虚拟化。
 
-当 local APIC 为 **x2APIC** 模式时
-* 如果“virtualize x2 APIC mode”为 1, 则使用 VMX 提供的 x2APIC 模式虚拟化功能。
-* 如果“virtualize x2 APIC mode”为 0, 则利用 MSR bitmap 来达到 local APIC 虚拟化。
-
-Dowritemsrforapicbase 例程通过检査 guest 写入 IA32 APIC BASE 寄存器的值确定 guest 的 local APIC 处于何种工作模式。在检查写入值不合法时将注入#GP 异常给 guest 处理，例如保留位（bits63: N、bit9 以及 bits7:0) 必须为 0。
+`DoWriteMsrForApicBase` 例程通过检査 guest 写入 **IA32 APIC BASE** 寄存器的**值**确定 guest 的 local APIC 处于**何种工作模式**。在检查**写入值不合法**时将**注入** `#GP` 异常给 guest 处理，例如保留位（bits 63:N、bit 9 以及 bits 7:0) 必须为 0。
 
 当利用 EPT violation 来虚拟化 local APIC 时，下面是简单的处理流程。
 
