--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -352,7 +352,7 @@ DoWriteMsrForApicBase.Done:
 
 (2) 保存 guest 写入 `IA32APIC_BASE` 寄存器的值。这个值在 guest 读取 `IA32_APIC_BASE` 寄存器时需要反馈给 guest
 
-(3) 为 guest 的写入值提供一个 EPT violation 处理例程。
+(3) 为 guest 的写入值提供一个 `EPT violation` 处理例程。
 
 ## 保存 guest 的写入值
 
