--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. 限制local APIC的方案.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. 限制local APIC的方案.md
@@ -3,7 +3,9 @@
 
 例如，**guest** 可以通过写local APIC的ICR寄存器向其他处理器发送IPI, 也可以提升local APIC的**TPR值**来**屏蔽外部中断**。guest的这些行为将**更改物理资源！！！**，**严重地干扰host环境！！！**。
 
-为了保护物理资源，VMM必须限制 guest 对**物理local APIC**的访问。VMM可以选择使用下面的方案来**限制访问local APIC**.
+为了保护物理资源，VMM必须限制 guest 对**物理local APIC**的访问。
+
+VMM可以选择使用下面的方案来**限制访问local APIC**.
 
 - 通过**EPT映射机制**或者 **MSR-bitmap** 限制访问。
 - 通过 **virtual-APIC** 机制进行虚拟化处理local APIC访问。
