--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. 限制local APIC的方案.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/0. 限制local APIC的方案.md
@@ -8,6 +8,6 @@
 VMM可以选择使用下面的方案来**限制访问local APIC**.
 
 - 通过**EPT映射机制**或者 **MSR-bitmap** 限制访问。
-- 通过 **virtual-APIC** 机制进行虚拟化处理local APIC访问。
+- 通过 **virtual-APIC** 机制进行虚拟化**处理local APIC访问**。
 
 `virtual-APIC`机制是**VMX**为local APIC而引进的**虚拟化内存机制**。guest 代码对localAPIC进行访问实际上访问的是**virtual-APIC page区域！！！**。
