--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -348,7 +348,7 @@ DoWriteMsrForApicBase.Done:
 
 当利用 EPT violation 来虚拟化 local APIC 时，下面是简单的处理流程。
 
-(1) 读取 EAX 与 EDX 寄存器值。两个寄存器组合的 64 位值是 guest 尝试写入 `IA32_APIC_BASE` 寄存器的值。
+(1) 读取 EAX 与 EDX 寄存器值。两个寄存器组合的 64 位值是 guest 尝试写入 `IA32_APIC_BASE` **寄存器的值**。
 
 (2) 保存 guest 写入 `IA32APIC_BASE` 寄存器的值。这个值在 guest 读取 `IA32_APIC_BASE` 寄存器时需要反馈给 guest
 
