--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/1. 监控guest访问local APIC.md
@@ -356,7 +356,30 @@ DoWriteMsrForApicBase.Done:
 
 ## 保存 guest 的写入值
 
-在前面介绍的 Do Writemsrforapicbase 函数里，使用 Appendmsrvte 函数将 guest 的写入值保存在了 guest 对应的 MSR VTE (Value Table Entry) 区域里。这个 MSR VTE 区域在 init vmcs buffer函数初始化时从 kernel pool 里分配。
+在前面介绍的 `DoWriteMsrForApicBase` 函数里，使用 `AppendMsrVte` 函数将 guest 的**写入值**保存在了 guest 对应的 MSR VTE (Value Table Entry) 区域里。这个 MSR VTE 区域在 init vmcs buffer函数初始化时从 **kernel pool** 里分配。
 
-在 inclvmcs. Ine 文件里定义了一个 MSR VTE 结构，这个结构用来定义 MSR VTE 区域里的每个表项。
+在 `inc\vmcs.inc` 文件里定义了一个 MSR_VTE 结构，这个结构用来定义 MSR VTE 区域里的每个表项。
+
+```inc
+;;
+;; MSR 值列表项结构
+;;
+struc MSR_VTE
+        .MsrIndex                       RESD    1
+        .Value                          RESQ    1
+
+        MSR_VTE_SIZE                    EQU     $
+endstruc
+```
+
+`AppendMsrVte` 函数的定义实现在 `lib\Vmx\VmxMsr.asm` 文件
+
+## 提供 EPT violation 处理例程
+
+Appendgpahte 函数的定义看起来像上面的 C 代码，实现在 libvmxvmx Page.asm 文件里。在 GPA HTE (Handler Table Entry）区域建立 GPA 与 EPT violation 处理例程的对应关系。这个 GPA HTE 区域在 init vmcs buffer 函数初始化时在 kernel pool 里分配。GPA HTE 结构定义在 inclvmcs.inc 文件里。
+
+## 处理读 IA32_APIC_BASE 产生的 VM-exit
+
+当 guest 尝试读取 `IA32_APIC_BASE` 寄存器的值时，VMM 拦截了 RDMSR 指令而产生 `VM-exit`。DORDMSR 例程检查到 **ECX** 的值是 `IA32_APIC_BASE` 寄存器时，调用 `DoReadMsrForApicBase` 例程来处理。
+
 
